--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/Eng-Muhammed-Samy/movi-apis-nodejs#readme",
   "dependencies": {
+    "bson": "^4.6.3",
     "express": "^4.18.1",
+    "http-errors": "^2.0.0",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
     "winston": "^3.7.2"
   }
