--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Eng-Muhammed-Samy/movi-apis-nodejs#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "bson": "^4.6.3",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
