--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "bson": "^4.6.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
